// Copyright (C) 2018 ConsenSys AG
//
// This file is part of uPort Mobile App.
//
// uPort Mobile App is free software: you can redistribute it and/or modify
// it under the terms of the GNU General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// uPort Mobile App is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU General Public License for more details.
//
// You should have received a copy of the GNU General Public License
// along with uPort Mobile App.  If not, see <http://www.gnu.org/licenses/>.
//
import {
  addData,
  fetchCurrentCountry,
  flagNewbie,
  unflagNewbie,
  setOnboardingNetwork
} from 'uPortMobile/lib/actions/onboardingActions'

it('creates a ADD_DATA action', () => {
  expect(addData({name: 'Barrington Levi'})).toMatchSnapshot()
})

it('creates a FETCH_CURRENT_COUNTRY action', () => {
  expect(fetchCurrentCountry()).toMatchSnapshot()
})

it('creates a FLAG_NEWBIE action', () => {
  expect(flagNewbie()).toMatchSnapshot()
})

it('creates a UNFLAG_NEWBIE action', () => {
  expect(unflagNewbie()).toMatchSnapshot()
})

it('creates a SET_ONBOARDING_NETWORK action', () => {
  expect(setOnboardingNetwork('0x42')).toMatchSnapshot()
})
